; ModuleID = '/home/carl/AnghaBench/xLua/WebGLPlugins/extr_lparser.c_listfield.c'
source_filename = "/home/carl/AnghaBench/xLua/WebGLPlugins/extr_lparser.c_listfield.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.ConsControl = type { i32, i32, i32 }

@MAX_INT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"items in a constructor\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, %struct.ConsControl*)* @listfield to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @listfield(%struct.TYPE_4__* %0, %struct.ConsControl* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca %struct.ConsControl*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store %struct.ConsControl* %1, %struct.ConsControl** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = load %struct.ConsControl*, %struct.ConsControl** %4, align 8
  %7 = getelementptr inbounds %struct.ConsControl, %struct.ConsControl* %6, i32 0, i32 2
  %8 = call i32 @expr(%struct.TYPE_4__* %5, i32* %7)
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.ConsControl*, %struct.ConsControl** %4, align 8
  %13 = getelementptr inbounds %struct.ConsControl, %struct.ConsControl* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @MAX_INT, align 4
  %16 = call i32 @checklimit(i32 %11, i32 %14, i32 %15, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %17 = load %struct.ConsControl*, %struct.ConsControl** %4, align 8
  %18 = getelementptr inbounds %struct.ConsControl, %struct.ConsControl* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %18, align 4
  %21 = load %struct.ConsControl*, %struct.ConsControl** %4, align 8
  %22 = getelementptr inbounds %struct.ConsControl, %struct.ConsControl* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %22, align 4
  ret void
}

declare dso_local i32 @expr(%struct.TYPE_4__*, i32*) #1

declare dso_local i32 @checklimit(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
